# india-itr-toolkit

./: .gitignore  DEVELOPER.md  LICENSE  README.md
ScheduleFA/: AGENTS.md  README.md  dividend-contribution.cmd  pyproject.toml  schedule-fa-csv.cmd
ScheduleFA/src/dividend_contribution/: __init__.py  __main__.py  allocation.py  cli.py  computation.py  headers.py  parsing.py  readers.py  writer.py
ScheduleFA/src/schedule_fa_csv/: __init__.py  __main__.py  cli.py  reader.py  writer.py
ScheduleFA/templates/: fa_input_template.xlsx  fa_output_headers.csv  generate_templates.py
ScheduleFA/tests/: conftest.py  generate_sample_data.py  test_allocation.py  test_computation.py  test_end_to_end.py  test_headers.py  test_parsing.py  test_readers.py  test_schedule_fa_csv.py  test_templates.py  test_writer.py
