[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dividend-contribution"
version = "1.0.0"
description = "Compute per-lot dividend contribution from a dividend file and a stock-transaction ledger."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["openpyxl>=3.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
dividend-contribution = "dividend_contribution.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
