[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schedule-fa-tools"
version = "1.0.0"
description = "Schedule FA helpers for Indian ITR: per-lot dividend contribution and Table A3 CSV generation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["openpyxl>=3.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
dividend-contribution = "dividend_contribution.cli:main"
schedule-fa-csv = "schedule_fa_csv.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
